feat: Deployment Configuration (Railway + Vercel + Redis)